# anim

./: .gitignore  .gitmodules  .projectile  CMakeLists.txt  README.md
assets/: untitled.glb  work.blend  work.blend1  work.gltf  work.mtl
include/: stb_image.h  tiny_gltf.h
include/glad/: glad.h
src/: glad.c  main.cpp  tinygltf.cc  vis.frag  vis.vert
src/animation/: animation.hpp  bone.cpp  bone.hpp  bone_mesh.hpp  bvhimporter.cpp  bvhimporter.hpp  cube_mesh.hpp  frame.hpp  inverse_kinematics.hpp  joint.hpp  loader.hpp  retargeter.cpp  retargeter.hpp
src/app/: demoscene.hpp  enhanced.hpp  ikscene.hpp  scene.hpp
src/core/: camera.hpp  files.hpp  grid.hpp  input.hpp  mesh.hpp  models.cpp  models.hpp  renderer.hpp  scene.hpp  shader.hpp  transform.cpp  transform.hpp  ui.hpp  window.hpp
src/ui/: mapper.hpp
